[gd_scene load_steps=10 format=3 uid="uid://b0xc1qdyjc71h"]

[ext_resource type="Texture2D" uid="uid://bb61vdm3cafym" path="res://assets/sprites/big_bars/1.png" id="1_mppns"]
[ext_resource type="Script" path="res://scenes/health_dashboard/health_dashboard.gd" id="1_n45cv"]
[ext_resource type="Texture2D" uid="uid://d20lorttsvrqr" path="res://assets/sprites/big_bars/3.png" id="2_7nvvb"]
[ext_resource type="Texture2D" uid="uid://dx6ey3dct7uq" path="res://assets/sprites/big_bars/4.png" id="3_hwq1l"]
[ext_resource type="Texture2D" uid="uid://c3qpnqudkq7ds" path="res://assets/atlases/text.png" id="4_c5ekd"]
[ext_resource type="Texture2D" uid="uid://oc03pxwphene" path="res://assets/sprites/big_bars/colors/1.png" id="4_mtid7"]
[ext_resource type="Texture2D" uid="uid://cujc748xairkw" path="res://assets/images/plastic_bottle.png" id="6_af4v6"]

[sub_resource type="AtlasTexture" id="AtlasTexture_ixw0o"]
atlas = ExtResource("4_c5ekd")
region = Rect2(104, 4, 10, 11)

[sub_resource type="AtlasTexture" id="AtlasTexture_rrvw3"]
atlas = ExtResource("4_c5ekd")
region = Rect2(104, 44, 10, 11)

[node name="health_dashboard" type="CanvasLayer"]
script = ExtResource("1_n45cv")

[node name="LifeBar" type="Control" parent="."]
layout_mode = 3
anchors_preset = 0
offset_left = 8.525
offset_right = 48.525
offset_bottom = 40.0

[node name="Left" type="TextureRect" parent="LifeBar"]
texture_filter = 3
layout_mode = 0
offset_right = 72.0
offset_bottom = 72.0
texture = ExtResource("1_mppns")

[node name="Center" type="TextureRect" parent="LifeBar"]
texture_filter = 3
layout_mode = 0
offset_left = 72.0
offset_right = 144.0
offset_bottom = 72.0
texture = ExtResource("2_7nvvb")

[node name="Right" type="TextureRect" parent="LifeBar"]
texture_filter = 3
layout_mode = 0
offset_left = 144.0
offset_right = 216.0
offset_bottom = 72.0
texture = ExtResource("3_hwq1l")

[node name="Bar" type="TextureProgressBar" parent="LifeBar"]
layout_mode = 0
offset_left = 38.0
offset_top = 31.0
offset_right = 207.0
offset_bottom = 36.0
max_value = 10.0
value = 10.0
nine_patch_stretch = true
texture_over = ExtResource("4_mtid7")

[node name="BottelGroup" type="Control" parent="LifeBar"]
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="X" type="TextureRect" parent="LifeBar/BottelGroup"]
texture_filter = 5
layout_mode = 0
offset_left = 66.475
offset_top = 70.065
offset_right = 106.475
offset_bottom = 110.065
texture = SubResource("AtlasTexture_ixw0o")

[node name="Number1" type="TextureRect" parent="LifeBar/BottelGroup"]
texture_filter = 3
layout_mode = 0
offset_left = 162.515
offset_top = 71.0
offset_right = 202.515
offset_bottom = 111.0
texture = SubResource("AtlasTexture_rrvw3")

[node name="Number2" type="TextureRect" parent="LifeBar/BottelGroup"]
texture_filter = 3
layout_mode = 0
offset_left = 210.515
offset_top = 71.0
offset_right = 250.515
offset_bottom = 111.0
texture = SubResource("AtlasTexture_rrvw3")

[node name="Number3" type="TextureRect" parent="LifeBar/BottelGroup"]
texture_filter = 3
layout_mode = 0
offset_left = 116.515
offset_top = 70.0
offset_right = 156.515
offset_bottom = 110.0
texture = SubResource("AtlasTexture_rrvw3")

[node name="Coin" type="TextureRect" parent="LifeBar/BottelGroup"]
texture_filter = 5
layout_mode = 0
offset_left = 6.475
offset_top = 61.0
offset_right = 41.475
offset_bottom = 113.0
texture = ExtResource("6_af4v6")
